// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Snapshots matches snapshot for range date picker 1`] = `
<div>
  <div
    class="cds--form-item"
    data-testid="snapshot-range"
  >
    <div
      class="cds--date-picker cds--date-picker--range"
    >
      <div
        class="cds--date-picker-container"
      >
        <label
          class="cds--label"
          dir="auto"
          for="start-date"
        >
          Start Date
        </label>
        <div
          class="cds--date-picker-input__wrapper"
        >
          <span>
            <input
              class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
              id="start-date"
              pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
              placeholder="dd/MM/yyyy"
              type="text"
            />
            <svg
              aria-hidden="true"
              class="cds--date-picker__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="cds--date-picker-container"
      >
        <label
          class="cds--label"
          dir="auto"
          for="end-date"
        >
          End Date
        </label>
        <div
          class="cds--date-picker-input__wrapper"
        >
          <span>
            <input
              class="cds--date-picker__input cds--date-picker__input--md"
              data-fp-omit=""
              id="end-date"
              pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
              placeholder="dd/MM/yyyy"
              type="text"
            />
            <svg
              aria-hidden="true"
              class="cds--date-picker__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker Snapshots matches snapshot for single date picker 1`] = `
<div>
  <div
    class="cds--form-item"
    data-testid="snapshot-single"
  >
    <div
      class="cds--date-picker"
    >
      <div
        class="cds--date-picker-container"
      >
        <label
          class="cds--label"
          dir="auto"
          for="date-input"
        >
          Date
        </label>
        <div
          class="cds--date-picker-input__wrapper"
        >
          <span>
            <input
              class="cds--date-picker__input cds--date-picker__input--md"
              id="date-input"
              pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
              placeholder="dd/MM/yyyy"
              type="text"
            />
            <svg
              aria-hidden="true"
              class="cds--date-picker__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker Snapshots matches snapshot with custom format 1`] = `
<div>
  <div
    class="cds--form-item"
  >
    <div
      class="cds--date-picker"
    >
      <div
        class="cds--date-picker-container"
      >
        <label
          class="cds--label"
          dir="auto"
          for="date-input"
        >
          Date
        </label>
        <div
          class="cds--date-picker-input__wrapper"
        >
          <span>
            <input
              class="cds--date-picker__input cds--date-picker__input--md"
              id="date-input"
              pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
              placeholder="yyyy-MM-dd"
              type="text"
            />
            <svg
              aria-hidden="true"
              class="cds--date-picker__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
